src/objects/c2g__AsOfAgingReportSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration of As of Aging Reports: As of Aging age &quot;bands&quot;, and choice of age by Transaction Date or Due Date.</description>
    <fields>
        <fullName>c2g__AgeBand1Label__c</fullName>
        <defaultValue>&apos;1) Current&apos;</defaultValue>
        <label>Age Band 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AgeBand1Max__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Age Band 1 Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgeBand2Label__c</fullName>
        <defaultValue>&apos;2) 1 to 30 Days&apos;</defaultValue>
        <label>Age Band 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AgeBand2Max__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Age Band 2 Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgeBand3Label__c</fullName>
        <defaultValue>&apos;3) 31 to 60 Days&apos;</defaultValue>
        <label>Age Band 3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AgeBand3Max__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Age Band 3 Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgeByDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Age by Due Date</label>
        <type>Checkbox</type>
    </fields>
    <label>As of Aging Report Settings</label>
</CustomObject>